# fula-api

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  PRIVACY.md  README.md  docker-compose.yml  install.sh
.github/workflows/: deploy-docs.yml
crates/fula-blockstore/: Cargo.toml
crates/fula-blockstore/benches/: blockstore_benchmarks.rs
crates/fula-blockstore/src/: block.rs  chunker.rs  cid_utils.rs  cluster.rs  error.rs  ipfs.rs  ipfs_pinning.rs  lib.rs  memory.rs  pinning_service.rs
crates/fula-cli/: Cargo.toml
crates/fula-cli/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  multipart.rs  pinning.rs  routes.rs  server.rs  state.rs  xml.rs
crates/fula-cli/src/handlers/: batch.rs  bucket.rs  mod.rs  multipart.rs  object.rs  service.rs  tagging.rs
crates/fula-client/: Cargo.toml
crates/fula-client/src/: client.rs  config.rs  encryption.rs  error.rs  lib.rs  multipart.rs  types.rs
crates/fula-client/tests/: encrypted_filesystem_tests.rs
crates/fula-core/: Cargo.toml
crates/fula-core/benches/: prolly_benchmarks.rs
crates/fula-core/src/: bucket.rs  crdt.rs  error.rs  lib.rs  metadata.rs
crates/fula-core/src/prolly/: diff.rs  hash.rs  mod.rs  node.rs  tree.rs
crates/fula-crypto/: Cargo.toml
crates/fula-crypto/benches/: crypto_benchmarks.rs
crates/fula-crypto/src/: chunked.rs  error.rs  hamt_index.rs  hashing.rs  hpke.rs  hybrid_kem.rs  inbox.rs  keys.rs  lib.rs  private_forest.rs  private_metadata.rs  rotation.rs  secret_link.rs  sharing.rs  streaming.rs  subtree_keys.rs  symmetric.rs
docs/: Decentralized S3-Compatible Storage Plan.md  Ipfs-pinning-API.md  THREAT_MODEL.md  audit-report1.md  audit-report2.md  audit-report3.md  audit-report4.md  audit-result1.md  audit-result2.md  audit.md  benchmark.md  feature-adition.md  openAPI.yaml  tree-spliting.doc  wnfs-borrowed-features.md  wnfs-comparison.md
docs/website/: api.html  index.html  intro.html  platforms.html  sdk.html  security.html
docs/website/css/: intro.css  security.css  styles.css
docs/website/js/: app.js
examples/: basic_usage.rs  benchmark.rs  benchmark_common.rs  benchmark_deep_structure.rs  benchmark_large_file.rs  benchmark_parallel.rs  benchmark_sharing.rs  benchmark_small_files.rs  encrypted_storage.rs  encrypted_upload_test.rs  file_manager_demo.rs  flat_namespace_demo.rs  ipfs_pinning_test.rs  metadata_privacy.rs  multipart_upload.rs  s3_compatible.rs  s3_sdk_integration.rs  security_verification.rs  sharing_demo.rs
tests/: api_tests.rs  integration_test.rs  security_audit_tests.rs
