[package]
name = "fula-core"
description = "Core storage engine for Fula - Prolly Trees, bucket management, and S3 metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
fula-crypto = { path = "../fula-crypto" }
fula-blockstore = { path = "../fula-blockstore" }

# IPFS/IPLD
cid = { workspace = true }
multihash = { workspace = true }
libipld = { workspace = true }
ipld-core = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
test-log = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
tokio-test = "0.4"

[[bench]]
name = "prolly_benchmarks"
harness = false
